# ChangeLog for dev-libs/distorm64
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/distorm64/ChangeLog,v 1.5 2011/07/31 11:47:57 patrick Exp $

*distorm64-3.1 (31 Jul 2011)

  31 Jul 2011; Patrick Lauer <patrick@gentoo.org> +distorm64-3.1.ebuild:
  Bump for #352078

  22 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  distorm64-1.7.30-r1.ebuild:
  Set SUPPORT_PYTHON_ABIS.

  29 Jun 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  distorm64-1.7.30-r1.ebuild, +files/distorm64-1.7.30-python.patch,
  +files/distorm64-1.7.30-respect_flags.patch:
  Fix building with Python 2.6 (bug #272612). Respect CC, CFLAGS and
  LDFLAGS.

*distorm64-1.7.30-r1 (04 Feb 2009)

  04 Feb 2009; Patrick Lauer <patrick@gentoo.org>
  +distorm64-1.7.30-r1.ebuild:
  Build disasm tool, fixes #257620

*distorm64-1.7.30 (03 Feb 2009)

  03 Feb 2009; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +distorm64-1.7.30.ebuild:
  Initial import. Ebuild from Tuna <tuna@lyua.org>. Closes #201148
