@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX distorm64-1.7.30-python.patch 207 RMD160 d5bbb28657d7919d59834461530561e5da12f0db SHA1 1e5044807334c08048f1d85219d98c662e0a33c1 SHA256 2d3e01ec623b601f4a2e8de7fc32f50ffafb3bed76f52ebc4872a7e1e233d75e
 AUX distorm64-1.7.30-respect_flags.patch 1388 RMD160 c68140ed01cdf626eba3b5b016002a4dd26c6c8d SHA1 20fea4710e8e30f40f22ee409dc1f46335c5949c SHA256 b42bd4566e4fd757c73f5a534ae13c6569919c17cea2e3527cd93646e3a722c5
 DIST distorm3-1.0.zip 137505 RMD160 c52c6e69f40564bdbb9fdd8b1bc3f36237c7b9cb SHA1 d23b309fe58a3808c369f2bcacd7c165b53545d2 SHA256 f381d0ddabed04ee9161633d3eb3c0bdb87100accd9b669385d4d72b36931f69
 DIST distorm64-pkg1.7.30.tar.bz2 91976 RMD160 34150563401044d98f986f2fea82faeeceb24ab9 SHA1 6948457695b11a4c2190012435da750898bb2c85 SHA256 bc2fc90e2111dfbba7fa397725ed6ae8b70477a3f7c60995e73d44a778a751be
 EBUILD distorm64-1.7.30-r1.ebuild 1842 RMD160 19f17755d1ee93450f71116794a528055f5bcfed SHA1 f6e63c1f702dc9d64315d4ffb01b9fcc9f4ded8b SHA256 9c07f9781c448e4a9a06192ca33c344f9c65bf6c47c1f94973ce1001eb2350bc
-EBUILD distorm64-3.1.ebuild 711 RMD160 f65b6d43be0bc1a589667809b75d7868c65df65a SHA1 a8e5088f019af782fceff149d061a4d6da2fd455 SHA256 cb6f1595e6b38e0063a0569ec60c5dc29a03ee85932db360fcb60d8fd156838f
-MISC ChangeLog 1080 RMD160 d54dfb8c654f2c33737ee86f4b47f7dd28907f5b SHA1 65a9565ab439b7e7f117bb676a1330a6c2dd5894 SHA256 f89b668f056073791ca0078918d7e638a82cf99f97b980dafbd322e434db519a
-MISC metadata.xml 296 RMD160 b8972abc6a10b49a6afb29c2fcb1e0dc3b4753b2 SHA1 f8e6300e113aa10f75cf7bf334c24070e2eb5ccf SHA256 711cad846b67b387cac3e2dd0b719054f44f422274c36ddb4eb49603a1b488fc
+EBUILD distorm64-3.1.ebuild 709 RMD160 47b5d632f42f2b0a6a6b93751546307df989015f SHA1 5f874e8b04a38b785c113e3746e5d34898fc5338 SHA256 2fe32f2fbe86d8e3bcba3f709ec087ca5fff5176599ba2045f1c9baa4b97b8bf
+MISC ChangeLog 1228 RMD160 8c8e6030c8b5db5eec93e7ffb031ccb755fec2b3 SHA1 205deba82ba4c18b9fb06e3368b906a9d50e42f3 SHA256 eeac43633b1691c20cdfc1e7765a31a918504cac5017a5bafad1d3ce8562ce79
+MISC metadata.xml 423 RMD160 c46b26a4af0ef215bad9390d22af719f389d2a95 SHA1 2ab5bb4d7e8e2e11dc3303117a6fb8cf6adf6aec SHA256 c309b53ca9d654f66418092bd8d56993856058e63ffc230707f129b649786e6c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk41jOIACgkQu7rWomwgFXqM4QCght8quY4MRze1t0Nt9pPZNY0V
+k14An0BXFdo1aZ/p8t2+BkTUdmu6zjx1
+=Dl57
+-----END PGP SIGNATURE-----
